deleted tasks due to runtime errors